--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,111 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
+  width: 100%;
+  min-height: 100vh;
+}
+
+.header {
+  display: flex;
+  width: 100%;
+  height: 3.5rem;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+.menu {
+  display: flex;
+  flex-direction: row;
+  flex-grow: 1;
+  justify-content: space-around;
+}
+
+.menu > div:hover {
+  cursor: pointer;
+}
+
+.footer {
+  background-color: #2e2e2e;
+  display: flex;
+  flex-direction: column;
+}
+
+.link-items-container {
+  padding-top: 1rem;
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.about-image {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.body {
+  flex-grow: 1;
+}
+
+.swiper-slide-banner {
+  width: 100%;
+  height: 30rem;
+}
+
+.collection-container {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  align-items: center;
+}
+
+.collections {
+  display: flex;
+  flex-direction: row;
+}
+
+.collection {
+  margin-left: 1.5rem;
+  margin-right: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 1.5rem;
+}
+
+.collection:hover {
+cursor: pointer;
+}
+
+.collection-image {
+  border-radius: 50%;
+  width: 8rem;
+  height: 8rem;
+}
+
+.collection-image:hover {
+  transform: scale(1.1);
+}
+
+.sales {
+  margin-top: 1rem;
+  display: flex;
+  width: 100%;
+  margin-bottom: 1rem;
+  justify-content: space-around;
+}
+
+.sale-item {
+  display: flex;
+}
+
+.sale-item-title {
+  font-weight: 500;
+  font-size: 1.05rem;
+}
+
+.sale-image {
+  margin-right: 0.5rem;
 }
